# papi

./: Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
papi/: __init__.py  base.py  contexts.py  edges.py  excs.py  nodes.py  utils.py
papi_examples/: example1.py  example1.yaml  utils.py
papi_tests/: test_examples.py  test_param_param.py  test_parameters.py
