[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
#envs = ["main"]
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "papi"
version = "0.1.0"
homepage = "https://github.com/valohai/papi"
description = "Experimental imperative Valohai pipeline API"
authors = ["Aarni Koskela <aarni@valohai.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
valohai-yaml = "^0.14.1"

[tool.poetry.dev-dependencies]
dephell = "^0.8.3"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.8.0"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
check-format = [
  { cmd = "black --check ." },
  { cmd = "isort --check ." },
]
format = [
  { cmd = "black ." },
  { cmd = "isort ." },
]
check-types = [
  { cmd = "mypy ." }
]
