[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "valohai-papi"
version = "0.1.1"
homepage = "https://github.com/valohai/papi"
description = "Experimental imperative Valohai pipeline API"
authors = ["Aarni Koskela <aarni@valohai.com>"]
license = "MIT"
packages = [
  { include = "papi" },
]

[tool.poetry.dependencies]
python = "^3.6.1"
valohai-yaml = "^0.14.1"
dataclasses = {version = ">=0.6", python = "<3.7"}

[tool.poetry.dev-dependencies]
dephell = "^0.8.3"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.8.0"
poethepoet = "^0.10.0"
flake8 = "^3.9.0"
flake8-bugbear = "^21.4.3"
flake8-print = "^4.0.0"
flake8-return = "^1.1.2"
flake8-simplify = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
make-setup = [
  { cmd = "dephell deps convert" },
  { cmd = "black setup.py" },
]
check-format = [
  { cmd = "black --check ." },
  { cmd = "isort --check ." },
]
format = [
  { cmd = "black ." },
  { cmd = "isort ." },
]
lint = [
  { cmd = "flake8 ." },
  { cmd = "mypy ." }
]
