[metadata]
long_description = file:./README.md
long_description_content_type = text/markdown
name = valohai-papi
version = attr:papi.__version__
description = Experimental imperative Valohai pipeline API
author = Aarni Koskela
author_email = aarni@valohai.com
license = MIT

[options]
python_requires = ==3.*,>=3.6.1
packages =
    papi
install_requires =
    dataclasses>=0.6; python_version < "3.7"
    valohai-yaml>=0.14.1

[flake8]
max-line-length = 88
per-file-ignores =
    papi_examples/*: T001,T002,T003,T004,T203
